# get_offline_reduced

./: App.cpp  App.h  CMakeLists.txt  Event.cpp  Event.h  Photon.cpp  Photon.h  Settings.cpp  Settings.h  main.cpp
